@@ -3,6 +3,7 @@ Development Portal (2020-06-05 shi)
 Updated recepient-country layout for document-links
 Display all links in new tab for new SAVi
 Update vocab geonames link for location-id
+Add hover titles for location sub-elements
 
 
 Development Portal (2020-06-01 shi)
